[package]
name = "rockbot-credentials"
version.workspace = true
edition = "2021"
description = "Secure credential storage for RockBot agents"
license = "MIT"

[features]
default = []
vault-replication = ["rockbot-storage/replication"]

[lints]
workspace = true

[dependencies]
rockbot-chat = { path = "../rockbot-chat" }
rockbot-config = { path = "../rockbot-config" }

# Age encryption
age = { version = "0.10", features = ["armor"] }

# SSH key parsing
ssh-key = { version = "0.6", features = ["crypto", "encryption"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Async runtime (for manager module)
tokio = { workspace = true, features = ["sync"] }

# Cryptography - AES-256-GCM + Argon2
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "1.7", features = ["derive"] }

# Encoding
base64 = "0.22"

# Unified storage backend
rockbot-storage = { path = "../rockbot-storage" }
rockbot-storage-runtime = { path = "../rockbot-storage-runtime" }
rockbot-vdisk = { path = "../rockbot-vdisk" }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "test_vault"
path = "examples/test_vault.rs"
