[package]
name = "rockbot-gateway"
version.workspace = true
edition = "2021"
description = "Gateway server for RockBot (HTTP, WebSocket, A2A, cron)"
license = "MIT"

[features]
default = ["bedrock", "discord", "telegram", "signal", "tools-credentials", "tools-mcp", "tools-markdown"]
# LLM providers
anthropic = []
openai = []
ollama = ["dep:rockbot-llm-ollama"]
bedrock = []
# Channel providers
discord = ["dep:rockbot-channels-discord"]
telegram = ["dep:rockbot-channels-telegram"]
signal = ["dep:rockbot-channels-signal"]
# Tool providers
tools-credentials = ["dep:rockbot-tools-credentials"]
tools-mcp = ["dep:rockbot-tools-mcp", "rockbot-agent/tools-mcp"]
tools-markdown = ["dep:rockbot-tools-markdown"]
# Telemetry
otel = ["rockbot-agent/otel"]
# Embedded overseer
overseer = ["dep:rockbot-overseer"]
# Embedded butler companion agent
butler = ["dep:rockbot-butler"]
# Noise handshake and transport primitives
noise = ["dep:snow", "rockbot-client/noise"]
# Remote tool execution builds on the Noise transport
remote-exec = ["noise", "rockbot-client/remote-exec", "rockbot-agent/remote-exec"]
# S3 CA distribution + Route53 DNS
bedrock-deploy = ["bedrock", "dep:rockbot-deploy", "rockbot-deploy/bedrock"]
# Allow plain-text HTTP/WS connections (insecure; default requires TLS)
http-insecure = []

[lints]
workspace = true

[dependencies]
rockbot-agent = { path = "../rockbot-agent" }
rockbot-client = { path = "../rockbot-client" }
rockbot-config = { path = "../rockbot-config" }
rockbot-store = { path = "../rockbot-store" }
rockbot-session = { path = "../rockbot-session" }
rockbot-webui = { path = "../rockbot-webui" }
rockbot-tools = { path = "../rockbot-tools" }
rockbot-memory = { path = "../rockbot-memory" }
rockbot-llm = { path = "../rockbot-llm", default-features = false }
rockbot-llm-ollama = { path = "../rockbot-llm-ollama", optional = true }
rockbot-security = { path = "../rockbot-security" }
rockbot-credentials = { path = "../rockbot-credentials" }
rockbot-credentials-schema = { path = "../rockbot-credentials-schema" }
rockbot-channels = { path = "../rockbot-channels" }

# Per-channel crates (optional)
rockbot-channels-discord = { path = "../rockbot-channels-discord", optional = true }
rockbot-channels-telegram = { path = "../rockbot-channels-telegram", optional = true }
rockbot-channels-signal = { path = "../rockbot-channels-signal", optional = true }

# Per-tool crates (optional)
rockbot-tools-credentials = { path = "../rockbot-tools-credentials", optional = true }
rockbot-tools-mcp = { path = "../rockbot-tools-mcp", optional = true }
rockbot-tools-markdown = { path = "../rockbot-tools-markdown", optional = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tungstenite = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
cron = { workspace = true }

# Embedded overseer (optional)
rockbot-overseer = { path = "../rockbot-overseer", optional = true }
# Embedded butler companion agent (optional)
rockbot-butler = { path = "../rockbot-butler", optional = true }

# TLS for gateway listener + mTLS CSR signing
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rockbot-pki = { path = "../rockbot-pki" }
ring = { workspace = true }
x509-parser = { workspace = true }

# S3 CA distribution + Route53 DNS (optional)
rockbot-deploy = { path = "../rockbot-deploy", optional = true }

# Noise Protocol for remote execution (optional)
snow = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
