[package]
name = "rockbot-llm-bedrock"
version.workspace = true
edition = "2021"
description = "AWS Bedrock LLM provider for RockBot"
license = "MIT"

[lints]
workspace = true

[dependencies]
rockbot-llm = { path = "../rockbot-llm", default-features = false }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
async-stream = "0.3"
bytes = "1.0"
tokio = { workspace = true }
aws-config = { version = "1" }
aws-sdk-bedrock = { version = "1" }
aws-sdk-bedrockruntime = { version = "1" }
aws-smithy-types = { version = "1" }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
