[package]
name = "rockbot-llm-ollama"
version.workspace = true
edition = "2021"
description = "Ollama provider for RockBot"
license = "MIT"

[lints]
workspace = true

[dependencies]
rockbot-llm = { path = "../rockbot-llm", default-features = false }
async-trait = "0.1"
async-stream = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
