[package]
name = "rockbot-llm"
version = "0.1.2"
edition = "2021"
description = "LLM provider abstraction for RockBot"
license = "MIT"

[features]
default = ["bedrock"]
anthropic = ["dep:claude-agent-sdk"]
openai = []
ollama = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrock", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]

[lints]
workspace = true

[dependencies]
rockbot-credentials-schema = { path = "../rockbot-credentials-schema" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
dirs = "5"
bytes = "1.0"
async-stream = "0.3"

# Anthropic provider (optional)
claude-agent-sdk = { workspace = true, optional = true }

# AWS Bedrock provider (optional)
aws-config = { version = "1", optional = true }
aws-sdk-bedrock = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
