[package]
name = "rockbot-llm"
version.workspace = true
edition = "2021"
description = "LLM provider abstraction for RockBot"
license = "MIT"

[features]
default = []
ollama = []

[lints]
workspace = true

[dependencies]
rockbot-credentials-schema = { path = "../rockbot-credentials-schema" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
dirs = "5"
bytes = "1.0"
async-stream = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
